--- a/client/src/Layout/Admin/AdminAppBar/style.css
+++ b/client/src/Layout/Admin/AdminAppBar/style.css
@@ -1,79 +1,4 @@
- body{
-  /* background-color: #fff; */
-  font-family: sans-serif;
- }
- .nav {
-height: 100vh;
-  z-index: 7;
-  position: sticky;
-  top: 0;
-  align-self: flex-start;
-  flex-shrink: 0;
-  width: 272px;
-  padding-top: 32px;
-  padding-left: 32px;
-  padding-bottom: 32px;
-  box-sizing: border-box;
-background-color: #999;
-
-}
-.logo {
-  margin-bottom: 32px;
-  display: flex;
-}
-.logo a {
-  font-family: "Poppins";
-  color: black;
-  font-size: 29px;
-  transition: color 0.4s;
-  cursor: pointer;
-  text-decoration: none;
-}
-.nav ul {
-  margin-top: 40px;
-  margin-bottom: 0;
-  padding-left: 0;
-  list-style: none;
-}
-ul li {
-  line-height: 1;
-  list-style: none;
-  margin-top: 24px;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-ul li:first-of-type {
-  margin-top: 0 !important;
-}
-ul li a {
-  display: inline-flex;
-  align-items: center;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 1;
-}
-ul li a:hover svg {
-  color: #fff;
-}
-ul li  span {
-  color: #fff;
-  padding-left: 10px;
-  
-}
-ul li a svg {
-  margin-right: 12px;
-  color: #999;
-  transition: color 0.4s;
-  width: 24px;
-  height: 24px;
-}
-ul li a span {
-  margin-right: 12px;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 20px;
-  color: #fff;
-  transition: color 0.4s;
-  font-family: "Poppins";
+.layout{
+  height: fit-content;
+  background-color: #fff !important;
 }
